<resources>
    <string name="app_name">Kwuiq</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bg_image">bg_image</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_prompt">Enter your correct username and password</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_visibility_toggle">password_visibility_toggle</string>
    <string name="background_image">background_image</string>
    <string name="sign_in">Sign in</string>
    <string name="forgotten_password_prompt">Forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="get_started">Get started</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="just_few_details_to_get_you_started">Just few details to get you started</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="surname">Surname</string>
    <string name="other_name_s">Other Name(s)</string>
    <string name="phone_number">Phone Number</string>

    <string name="title_activity_recover_password">RecoverPasswordActivity</string>

    <string name="enter_your_registered_e_mail_address">Enter your registered e-mail address</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="recover_password">Recover password</string>
    <string name="code_verification">Code Verification</string>
    <string name="close_button">close_button</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_the_verification_code_that_was_sent_to_your_mail_inbox_to_continue">Enter the verification code that was sent to your mail inbox to continue.</string>
    <string name="verify_code">Verify Code</string>
    <string name="email_invalidity_response_text">E-mail address is invalid</string>
    <string name="password_invalidity_response_text">Password field cannot be blank</string>
    <string name="email_field_cannot_be_empty">E-mail field cannot be blank</string>
    <string name="password_field_cannot_be_empty">Password field cannot be blank</string>
    <string name="password_must_have_at_least_8_characters">Password must contain at least 8 characters</string>
    <string name="password_must_contain_at_least_one_uppercase_character">Password must contain at least one uppercase character</string>
    <string name="password_must_contain_at_least_one_lowercase_character">Password must contain at least one lowercase character</string>
    <string name="password_must_contain_at_least_one_special_character">Password must contain at least one special character</string>
    <string name="password_must_contain_at_least_one_numeric_character">Password must contain at least one numeric character</string>
    <string name="name_cannot_be_empty">Surname field cannot be empty</string>
    <string name="other_name_field_cannot_be_blank">Other name field cannot be blank</string>
    <string name="email_address_is_not_valid">Email address is invalid</string>
    <string name="phone_number_field_cannot_be_blank">Phone Number field cannot be blank</string>
    <string name="phone_number_is_invalid">Phone number is invalid</string>
    <string name="password_and_password_field_do_not_match">Password and Confirm Password fields do not match.</string>
    <string name="confirm_password_field_cannot_be_blank">Confirm Password field cannot be blank</string>
    <string name="incomplete_phone_number">Incomplete phone number</string>
    <string name="poor_connectivity_toast_msg">No internet connection, please check your settings and try again.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_dialog_neutral_button_label">OK</string>
    <string name="make_order_manually">MAKE ORDER MANUALLY</string>
    <string name="image_udacity_logo">image_udacity_logo</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_master_list">MasterListActivity</string>
    <string name="title_activity_detail">Detail Activity</string>
</resources>
