<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_90dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:contentDescription="@string/background_image"
            android:src="@drawable/kwiq_logo"
            android:scaleType="fitXY" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_30dp"
            android:background="@color/colorWhite_opacity50"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20dp">

            <!--Welcome back-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:text="@string/welcome_back"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <!--Enter your correct username and password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:text="@string/sign_in_prompt"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_12sp" />

            <!--E-mail-->
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="@dimen/dimen_5dp"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingStart="@dimen/dimen_10dp"
                android:textColorHint="@color/colorGrey" />

            <!--Password Layout-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp">

                <!--Password-->
                <AutoCompleteTextView
                    android:id="@+id/atv_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dimen_5dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:textColorHint="@color/colorGrey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:contentDescription="@string/password_visibility_toggle"
                    android:src="@drawable/ic_visibility"
                    android:tint="@color/colorGrey" />
            </RelativeLayout>

            <Button
                style="@style/ActionButton"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/tv_forgotten_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/forgotten_password_prompt"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_14sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
