<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_30dp"
        android:background="@color/colorWhite_opacity50"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20dp"
        android:layout_gravity="center">

        <!--Recover Password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:text="@string/recover_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold" />

        <!--Enter your registered E-Mail address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:text="@string/enter_your_registered_e_mail_address"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_12sp" />

        <!--E-mail-->
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:background="@drawable/rounded_white"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/dimen_5dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/e_mail"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:textColorHint="@color/colorGrey"
            android:textSize="@dimen/text_14sp" />

        <Button
            style="@style/ActionButton"
            android:text="@string/recover_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>