<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_90dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/code_verification"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dimen_5dp"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/enter_the_verification_code_that_was_sent_to_your_mail_inbox_to_continue"
                android:textSize="@dimen/text_12sp"
                android:textStyle="normal" />

            <AutoCompleteTextView
                android:id="@+id/atv_verif_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@drawable/ic_asterisk"
                android:drawablePadding="@dimen/dimen_5dp"
                android:drawableStart="@drawable/ic_asterisk"
                android:hint="@string/enter_verification_code"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lineSpacingExtra="@dimen/dimen_2dp"
                android:maxLines="1"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingStart="@dimen/dimen_10dp"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text_18sp" />

            <Button
                android:id="@+id/btn_verify_code"
                style="@style/ActionButton"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginTop="40dp"
                android:text="@string/verify_code" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>