<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_progress_loader"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_gravity="center_horizontal"
            android:alpha="0.7"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_30dp"
            android:background="@color/colorWhite_opacity50"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20dp">

            <!--Reset Password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:text="@string/reset_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

            <!--Just few details to get you started-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:text="@string/enter_a_new_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_12sp" />

            <!--Password Layout-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp">

                <!--Password-->
                <AutoCompleteTextView
                    android:id="@+id/atv_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/dimen_5dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/text_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:contentDescription="@string/password_visibility_toggle"
                    android:src="@drawable/ic_visibility"
                    android:tint="@color/colorGrey" />
            </RelativeLayout>

            <!--Password Layout-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp">

                <!--Confirm Password-->
                <AutoCompleteTextView
                    android:id="@+id/atv_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@drawable/ic_asterisk"
                    android:drawablePadding="@dimen/dimen_5dp"
                    android:drawableStart="@drawable/ic_asterisk"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="@dimen/text_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:contentDescription="@string/password_visibility_toggle"
                    android:src="@drawable/ic_visibility"
                    android:tint="@color/colorGrey" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/ActionButton"
                android:text="@string/reset_password" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
